--- a/publication.html
+++ b/publication.html
@@ -54,14 +54,93 @@
 									</header>									
 									<h3><strong>At Nankai University:</strong></h3>
 									<h3><strong>2021</strong></h3>
-									<p>Gongyu Li et al. 2021 in press</p>									
-									<p>Gongyu Li et al. 2021 in press</p>									
+									<p>Gongyu Li et al. 2021 in press<br>									
+									Gongyu Li et al. 2021 in press</p>									
 									<h3><strong>Prior to Nankai University:</strong></h3>
-									<p>Gongyu Li et al. 2021 in press</p>
-									<p>Gongyu Li et al. 2021 in press</p>
-									<p>Gongyu Li et al. 2021 in press</p>
-									<p>Gongyu Li et al. 2021 in press</p>
-									<p>Gongyu Li et al. 2021 in press</p>
+									<p><strong>24</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>23</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>22</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>21</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>20</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>19</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>18</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>17</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>16</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>15</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>14</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>13</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>12</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>11</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>10</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>9</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>8</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>7</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>6</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>5</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>4</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
+									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
 									<strong>3</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
