--- a/people.html
+++ b/people.html
@@ -71,8 +71,8 @@
 										<header>
 											<h3>LIMS001: xxx</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.02 - now, Nankai University; 
-										<strong>MS</strong>: 2017.08 - 2021.01, UW-Madison;
+										<p><strong>PhD Student</strong>: 2021.02 - now, Nankai University<br> 
+										<strong>MS</strong>: 2017.08 - 2021.01, UW-Madison<br>
 										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
 									</section>
 
@@ -85,8 +85,8 @@
 										<header>
 											<h3>LIMS002: xxx</h3>
 										</header>
-										<p><strong>PhD Student</strong>: 2021.02 - now, Nankai University; 
-										<strong>MS</strong>: 2017.08 - 2021.01, UW-Madison;
+										<p><strong>PhD Student</strong>: 2021.09 - now, Nankai University<br>
+										<strong>MS</strong>: 2017.08 - 2021.09, UW-Madison<br>
 										<strong>BS</strong>: 2012.09 - 2017.06, USTC </p>
 									</section>
 
