--- a/publication.html
+++ b/publication.html
@@ -56,10 +56,11 @@
 									<p>Gongyu Li et al. 2021 in press<br>									
 									Gongyu Li et al. 2021 in press</p>									
 									<h3><strong>Prior to Nankai University:</strong></h3>
-									<p><strong>24</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
-									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
-									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<p><strong>24</strong>. Hua Zhang, Xudong Shi, Nhu Q. Vu,<strong>Gongyu Li</strong>, Zihui Li, 
+									Yatao Shi, Miyang Li, Bin Wang, Nathan V. Welham, Manish S. Patankar, and Lingjun Li*. 
+									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.0c02704#"><U>On-tissue 
+									derivatization for matrix-assisted laser desorption/ionization mass spectrometry imaging of N-glycans in cancer tissues.
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, xx, xxx-xxx. <br>
 									<strong>23</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
