--- a/publication.html
+++ b/publication.html
@@ -61,14 +61,18 @@
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.0c02704#"><U>On-tissue 
 									derivatization for matrix-assisted laser desorption/ionization mass spectrometry imaging of N-glycans in cancer tissues.
 									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, xx, xxx-xxx. <br>
-									<strong>23</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
-									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
-									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
-									<strong>22</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
-									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
-									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>23</strong>. Gaoyuan Lu, Xiaowei Xu,<strong>Gongyu Li</strong>, Nian Wang, Yinxue Zhu, 
+									Ning Wan, Yatao Shi, Lingjun Li, Haiping Hao*, and Hui Ye*. 
+									<a href="https://pubs.acs.org/doi/abs/10.1021/acs.analchem.9b03827"><U>Sub-residue Resolution 
+									Footprinting of Ligand-Protein Interactions by Carbene Chemistry and Ion Mobility-Mass Spectrometry.
+									</a></U> <strong><i>Anal. Chem. </i></strong> 2020, 92, 947-956. <br>
+									<strong>22</strong>. <strong>Gongyu Li</strong>, Fengfei Ma, Qinjingwen Cao, Zhen Zheng, Kellen DeLaney, Rui Liu and Lingjun Li*. 
+									<a href="https://www.nature.com/articles/s41467-019-12548-0"><U>Nanosecond 
+									Photochemically Promoted Click Chemistry for Enhanced Neuropeptide Visualization and Rapid Protein Labeling.
+									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 4697. <br>
+									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff">Nature Communications Editors’ HIGHLIGHTS</a>.]<br>
+									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract">F1000Prime Recommendation</a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
+									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry">Mass Spectrometry Fuels Nanosecond Photochemistry</a>]<br>
 									<strong>21</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
