--- a/publication.html
+++ b/publication.html
@@ -73,10 +73,10 @@
 									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff">Nature Communications Editors’ HIGHLIGHTS</a>.]<br>
 									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract">F1000Prime Recommendation</a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
 									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry">Mass Spectrometry Fuels Nanosecond Photochemistry</a>]<br>
-									<strong>21</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
-									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
-									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
+									<a href="https://www.nature.com/articles/s41467-019-12346-8"><U>Molecular Basis 
+									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
+									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
 									<strong>20</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
