--- a/publication.html
+++ b/publication.html
@@ -70,7 +70,7 @@
 									<a href="https://www.nature.com/articles/s41467-019-12548-0"><U>Nanosecond 
 									Photochemically Promoted Click Chemistry for Enhanced Neuropeptide Visualization and Rapid Protein Labeling.
 									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 4697. <br>
-									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff">Nature Communications Editors’ HIGHLIGHTS</a>.]<br>
+									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff"><i><strong><font color='red'>Nature Communications Editors’ HIGHLIGHTS</font></strong></i></a>.]<br>
 									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract">F1000Prime Recommendation</a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
 									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry">Mass Spectrometry Fuels Nanosecond Photochemistry</a>]<br>
 									<strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
