--- a/publication.html
+++ b/publication.html
@@ -71,16 +71,17 @@
 									Photochemically Promoted Click Chemistry for Enhanced Neuropeptide Visualization and Rapid Protein Labeling.
 									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 4697. <br>
 									[FEATURED in <a href="https://www.nature.com/collections/wdzvyhgxft/content/julia-eckhoff"><i><strong><font color='red'>Nature Communications Editors’ HIGHLIGHTS</font></strong></i></a>.]<br>
-									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract">F1000Prime Recommendation</a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
-									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry">Mass Spectrometry Fuels Nanosecond Photochemistry</a>]<br>
+									[<a href="https://f1000.com/prime/article?articleId=736760491&target=/prime/736760491#tab=abstract"><i><strong><font color='red'>F1000Prime Recommendation</font></strong></i></a>: being of SPECIAL SIGNIFICANCE in its field.]<br>
+									[Behind the Paper: <a href="https://chemistrycommunity.nature.com/users/325305-gongyu-li/posts/55152-mass-spectrometry-fuels-nanosecond-photochemistry"><i><strong><font color='red'>Mass Spectrometry Fuels Nanosecond Photochemistry</font></strong></i></a>]<br>
 									<strong>21</strong>. <strong>Gongyu Li</strong>, Kellen DeLaney, and Lingjun Li*. 
 									<a href="https://www.nature.com/articles/s41467-019-12346-8"><U>Molecular Basis 
 									for Chirality-regulated Aβ Self-Assembly and Receptor Recognition.
 									</a></U> <strong><i>Nat. Commun. </i></strong> 2019, 10, 5038. <br>
-									<strong>20</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
-									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
-									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>20</strong>. <strong>Gongyu Li</strong>, Daniel Delafield, and Lingjun Li*. 
+									<a href="https://www.sciencedirect.com/science/article/pii/S016599361830654X?via%3Dihub"><U>Improved 
+									Structural Elucidation of Peptide Isomers and Their Receptors Using Advanced Ion Mobility-Mass Spectrometry..
+									</a></U> <strong><i>Trends Anal. Chem. </i></strong> 2020, 124, 115546. <br>
+									[<i><strong><font color='red'>Invited Review</font></strong></i>.]<br>
 									<strong>19</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
