--- a/publication.html
+++ b/publication.html
@@ -82,10 +82,11 @@
 									Structural Elucidation of Peptide Isomers and Their Receptors Using Advanced Ion Mobility-Mass Spectrometry..
 									</a></U> <strong><i>Trends Anal. Chem. </i></strong> 2020, 124, 115546. <br>
 									[<i><strong><font color='red'>Invited Review</font></strong></i>.]<br>
-									<strong>19</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
-									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
-									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>19</strong>. Qinjingwen Cao, Yijia Wang, Bingming Chen, Fengfei Ma, Ling Hao,<strong>Gongyu Li</strong>, 
+									Chuanzi Ouyang, and Lingjun Li*. 
+									<a href="https://pubs.acs.org/doi/10.1021/acschemneuro.8b00730"><U>Visualization 
+									and Identification of Neurotransmitters in Crustacean Brain via Multifaceted Mass Spectrometric Approaches.
+									</a></U> <strong><i>ACS Chem. Neurosci. </i></strong> 2019, 10, 1222-1229. <br>
 									<strong>18</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
