--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Get to know our PI: <br />
+						<p>Get to know our PI: <br>
 						<strong>Dr. Gongyu Li</strong> </p>
 					</div>
 				</section>
