--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
+							<h1 id="logo"><a href="index.html">Li<font color='blue'>ms</font>Lab @ NKU </a></h1>
 							<p>Native Structural Mass Spectrometry</p>
 
 						<!-- Nav -->
