--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Li<font color='blue'>ms</font>Lab @ NKU </a></h1>
-							<p>Native Structural Mass Spectrometry</p>
+							<h1 id="logo"><a href="index.html">Li<font color='blue'>ms</font>Lab <font color='black'>@ NKU</font> </a></h1>
+							<p><strong>Native Structural Mass Spectrometry</strong></p>
 
 						<!-- Nav -->
 							<nav id="nav">
