--- a/news.html
+++ b/news.html
@@ -45,6 +45,9 @@
 				<section id="main">
 					<div class="container">
 						<div class="row">
+						<header>
+							<h2><strong>Welcome to NEWS SHOW @ LIMSLAB</strong></h2>
+						</header>
 
 							<!-- Sidebar -->
 								<div id="sidebar" class="col-4 col-12-medium">
