--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Li<font color='blue'>ms</font>Lab <font color='black'>@ NKU</font> </a></h1>
+							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font> </a></h1>
 							<p><strong>Native Structural Mass Spectrometry</strong></p>
 
 						<!-- Nav -->
