--- a/publication.html
+++ b/publication.html
@@ -49,7 +49,7 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2><strong>Publications</strong></h2>
+										<h2>Welcome to <strong>Pub Show</strong> @ <strong>LimsLab</strong>!</h2>
 									</header>									
 									<h3><strong>At Nankai University:</strong></h3>
 									<h3><strong>2021</strong></h3>
