--- a/news.html
+++ b/news.html
@@ -42,12 +42,13 @@
 				</section>
 
 			<!-- Main -->
+				<header>
+				    <h2>Welcome to <strong>NEWS Show</strong> @ <strong>LimsLab</strong>!</h2>
+			    </header>
 				<section id="main">
 					<div class="container">
 						<div class="row">
-						<header>
-							<h2><strong>Welcome to NEWS SHOW @ LIMSLAB</strong></h2>
-						</header>
+						
 
 							<!-- Sidebar -->
 								<div id="sidebar" class="col-4 col-12-medium">
