--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong>Tech Show</strong> @ <strong>LimsLab</strong>!</h2>
+							<h2>Welcome to <strong>Tech Show</strong> @ <strong>L<font color='blue'>ims</font>Lab</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
