--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<section id="banner">
 					<div class="container">
 						<p>Get to know our PI: <br>
-						<strong>Dr. Gongyu Li</strong> </p>
+						<strong><U>Dr. Gongyu Li</U></strong> </p>
 					</div>
 				</section>
 
