--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
+							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
 							<p>Native Structural Mass Spectrometry</p>
 
 						<!-- Nav -->
@@ -45,7 +45,7 @@
 				<section id="main">
 					<div class="container">
 					    <header>
-							<h2>Welcome to <strong>NEWS Show</strong> @ <strong>LimsLab</strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>NEWS Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row">
 							<!-- Sidebar -->
