--- a/publication.html
+++ b/publication.html
@@ -17,7 +17,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
+							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
 							<p>Native Structural Mass Spectrometry</p>
 
 						<!-- Nav -->
@@ -49,13 +49,13 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2>Welcome to <strong>Pub Show</strong> @ <strong>LimsLab</strong>!</h2>
+										<h2>Welcome to <strong><font color='green'><U>PUB Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 									</header>									
-									<h3><strong>At Nankai University:</strong></h3>
+									<h3><strong><U><font color='blue'>At Nankai University</font></U>:</strong></h3>
 									<h3><strong>2021</strong></h3>
 									<p>Gongyu Li et al. 2021 in press<br>									
 									Gongyu Li et al. 2021 in press</p>									
-									<h3><strong>Prior to Nankai University:</strong></h3>
+									<h3><strong><U><font color='blue'>Prior to Nankai University</font></U>:</strong></h3>
 									<p><strong>24</strong>. Hua Zhang, Xudong Shi, Nhu Q. Vu,<strong>Gongyu Li</strong>, Zihui Li, 
 									Yatao Shi, Miyang Li, Bin Wang, Nathan V. Welham, Manish S. Patankar, and Lingjun Li*. 
 									<a href="https://pubs.acs.org/doi/10.1021/acs.analchem.0c02704#"><U>On-tissue 
