--- a/people.html
+++ b/people.html
@@ -17,7 +17,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
+							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
 							<p>Native Structural Mass Spectrometry</p>
 
 						<!-- Nav -->
@@ -45,7 +45,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong>Team Show</strong> @ <strong>LimsLab</strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Team Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -140,7 +140,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong>Alumni Show</strong> @ <strong>LimsLab</strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Alumni Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -223,7 +223,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to <strong>Collaborator Show</strong> @ <strong>LimsLab</strong>!</h2>
+							<h2>Welcome to <strong><font color='green'><U>Collaborator Show</U></font></strong> @ <strong><font color='red'>L</font><font color='blue'>ims</font><font color='red'>Lab</font></strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
