--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
+							<h1 id="logo"><a href="index.html">L<font color='blue'>ims</font>Lab <font color='black'>@ NKU</font></a></h1>
 							<p>Native Structural Mass Spectrometry</p>
 
 						<!-- Nav -->
