--- a/index.html
+++ b/index.html
@@ -116,30 +116,30 @@
 										<article class="box post">											
 											<a class="image featured"><img src="images/Li_Gongyu_02_web_PS.jpg" alt="" /></a>
 											<p>To ultimately provide molecular basis and next-generation therapeutics for human disease, 
-											Dr. Gongyu Li has long-standing research interests in the development and application of 
-											ultrafast separation-equipped mass spectrometry (MS) techniques capable of: 1) in situ 
-											identification, 2) rapid structural elucidation and 3) expedited functional interrogation 
+											<U><strong>Dr. Gongyu Li</strong></U> has long-standing research interests in the development and application of 
+											ultrafast separation-equipped mass spectrometry (MS) techniques capable of: <strong>1)</strong> in situ 
+											identification, <strong>2)</strong> rapid structural elucidation and <strong>3)</strong> expedited functional interrogation 
 											of human disease-linked bioactive molecules, including differentially folded proteins/
 											neuropeptides/metabolites, directly from living cells or even fresh tissues. The most 
-											significant challenge is, however, how to remove intracellular and extracellular matrices 
+											significant <strong>challenge</strong> is, however, how to remove intracellular and extracellular matrices 
 											surrounding target biomolecules without external perturbations on their native biological 
 											states, where the separation time scale should be as short as possible to maintain the 
 											biologically relevant structural information. To solve this problem, Dr. Li has developed 
-											a millisecond micro-electrophoresis regime and integrated into nanospray, generating a 
-											new versatile ambient MS method called In-cell MS (Li et al. 
+											a <U>millisecond micro-electrophoresis</U> regime and integrated into nanospray, generating a 
+											new versatile ambient MS method called <strong>In-cell MS</U> (Li et al. 
 											Anal. Chem. 2016, 88, 10860-10866), and has demonstrated its utility for several protein 
 											systems directly from living cells (Li et al. Anal. Chem. 2018, 90, 3409-3415). In addition 
 											to contribution to the in-situ identification of native proteins, Gongyu also devoted himself 
 											in gas-phase protein structural interrogations, such as the development of a new regime for 
-											ion mobility-mass spectrometry (IM-MS)-based protein structural manipulations (Li et al. 
+											<strong>ion mobility-mass spectrometry (IM-MS)</strong>-based protein structural manipulations (Li et al. 
 											Anal. Chem. 2018, 90, 7997-8001). Dr. Li’s postdoc research work is focused on further 
-											expanding MS methodologies for better identification and structural interrogation of human 
-											health-linked bioactive molecules, ranging from native proteins, neuropeptides to metabolites. 
-											To this end, Gongyu has already developed a new millisecond ion mobility separation platform 
+											expanding MS methodologies for <U>better identification and structural interrogation of human 
+											health-linked bioactive molecules</U>, ranging from native proteins, neuropeptides to metabolites. 
+											To this end, Gongyu has already developed a new <strong>millisecond ion mobility separation platform</strong> 
 											to investigate chiral effect of amyloid beta peptide and its implications in Alzheimer’s disease 
-											therapeutic development (Li et al. Nat. Commun. 2019, 10, 5038) and a nanosecond photochemical 
+											therapeutic development (Li et al. <i><strong>Nat. Commun.</strong></i> 2019, 10, 5038) and a nanosecond photochemical 
 											click chemistry method for rapid neuropeptide and protein structural analysis (Li et al. 
-											Nat. Commun. 2019, 10, 4697, Featured by Nature Communications Editors HIGHLIGHTS). 
+											<i><strong>Nat. Commun.</strong></i> 2019, 10, 4697, Featured by Nature Communications Editors HIGHLIGHTS). 
 											Dr. Li’s research efforts, overall, have generated 4 grants, 7 fellowships/awards, 
 											6 oral presentations and 29 scientific publications to date, including 2 Nat. Commun., 
 											4 Anal. Chem., 1 Chem. Sci. and 1 Trends Anal. Chem. papers, along with 380+ citations.</p>											
@@ -177,7 +177,7 @@
 															<header>
 																<span class="date">Professional Preparations</span>																
 															</header>
-															<p>Dr. Gongyu Li obtained his Ph.D. degree in Analytical Chemistry under the supervision of Dr. 
+															<p><U><strong>Dr. Gongyu Li</strong></U> obtained his Ph.D. degree in Analytical Chemistry under the supervision of Dr. 
 															Guangming Huang at University of Science and Technology of China (USTC) in June 2017. His research career
 															started at Jiangxi Normal University (JXNU), where he received his B.S. in Chemistry in 2012.
 															In 2016 and 2019, he visited Dr. Brandon T. Ruotolo’s lab at University of Michigan as a visiting graduate
@@ -195,11 +195,11 @@
 															<header>
 																<span class="date">Academic Activities</span>																
 															</header>
-															<p>Dr. Gongyu Li is active acdemically as demonstrated by his continuous conference attending and oral presentations
+															<p><U><strong>Dr. Gongyu Li</strong></U> is acdemically active as basically demonstrated by his continuous conference attending and oral presentations
 															as well as serving as invited reviewer and judge reviewer for peer-reviewed journals. Amongst multiple academic 
 															recognitions by different international soceities over his academic career so far, Dr. Gongyu Li has been recently 
-															honored with 2019 ASMS Postdoctoral Career Development Award (ASMS, American Society for Mass Spectrometry) and 
-															selected as one of the four finalists for 2019 FACSS Innovation Award (FACSS: Federation of Analytical Chemistry 
+															honored with <strong>2019 ASMS Postdoctoral Career Development Award</strong> (ASMS, American Society for Mass Spectrometry) and 
+															selected as one of the four finalists for <strong>2019 FACSS Innovation Award</strong> (FACSS: Federation of Analytical Chemistry 
 															and Spectroscopy Societies).</p>
 														</article>
 
