--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 											states, where the separation time scale should be as short as possible to maintain the 
 											biologically relevant structural information. To solve this problem, Dr. Li has developed 
 											a <U>millisecond micro-electrophoresis</U> regime and integrated into nanospray, generating a 
-											new versatile ambient MS method called <strong>In-cell MS</U> (Li et al. 
+											new versatile ambient MS method called <strong>In-cell MS</strong> (Li et al. 
 											Anal. Chem. 2016, 88, 10860-10866), and has demonstrated its utility for several protein 
 											systems directly from living cells (Li et al. Anal. Chem. 2018, 90, 3409-3415). In addition 
 											to contribution to the in-situ identification of native proteins, Gongyu also devoted himself 
