--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 															<header>
 																<span class="date">Academic Activities</span>																
 															</header>
-															<p><U><strong>Dr. Gongyu Li</strong></U> is acdemically active as basically demonstrated by his continuous conference attending and oral presentations
+															<p><U><strong>Dr. Gongyu Li</strong></U> is academically active as basically demonstrated by his continuous conference attending and oral presentations
 															as well as serving as invited reviewer and judge reviewer for peer-reviewed journals. Amongst multiple academic 
 															recognitions by different international soceities over his academic career so far, Dr. Gongyu Li has been recently 
 															honored with <strong>2019 ASMS Postdoctoral Career Development Award</strong> (ASMS, American Society for Mass Spectrometry) and 
