--- a/people.html
+++ b/people.html
@@ -230,7 +230,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a class="image featured"><img src="images/guangming_huang.jpg" alt="" /></a>
+										<a class="image featured"><img src="images/guangming_huang_2017.jpg" alt="" /></a>
 										<header>
 											<h3>USTC: Prof. Dr. Guangming Huang</h3>
 										</header>
