--- a/people.html
+++ b/people.html
@@ -246,7 +246,7 @@
 										<header>
 											<h3>UW-Madison: Prof. Dr. Lingjun Li</h3>
 										</header>
-										<p><strong>Specialist</strong>: Quantitative Neuropeptidomics and Proteomics</p>
+										<p><strong>Specialist</strong>: Quantitative Peptidomics and Proteomics</p>
 									</section>
 
 							</div>
@@ -258,7 +258,7 @@
 										<header>
 											<h3>UM: Prof. Dr. Brandon Ruotolo</h3>
 										</header>
-										<p><strong>Specialist</strong>: IM-MS-based Gas-phase Protein Structure</p>
+										<p><strong>Specialist</strong>: Gas-phase Protein Structure</p>
 									</section>
 														
 							</div>
